--- a/Interzoic.SSO.Client.API.vbproj
+++ b/Interzoic.SSO.Client.API.vbproj
@@ -102,6 +102,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ProfileProperty.vb" />
     <Compile Include="UserProfile.vb" />
     <Compile Include="UserRoles.vb" />
     <Compile Include="Utility.vb" />
